// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Calendar component Month switcher: Click on arrows and check calendar table 1`] = `
<td
  class="jsx-3390703719"
  data-testid="table-cell-0-1"
>
  <div
    class="jsx-3877038798 calendar-cell is-today"
  >
    <div
      class="jsx-3877038798 day"
    >
      1
    </div>
    <div
      class="jsx-3877038798 plus"
      data-testid="add-event-2019-01-02T00:00:00.000Z"
      role="button"
    >
      +
    </div>
  </div>
</td>
`;

exports[`Test Calendar component Month switcher: Click on arrows and check calendar table 2`] = `
<td
  class="jsx-3390703719"
  data-testid="table-cell-4-3"
>
  <div
    class="jsx-3877038798 calendar-cell "
  >
    <div
      class="jsx-3877038798 day"
    >
      31
    </div>
    <div
      class="jsx-3877038798 plus"
      data-testid="add-event-2019-02-01T00:00:00.000Z"
      role="button"
    >
      +
    </div>
  </div>
</td>
`;

exports[`Test Calendar component Month switcher: Click on arrows and check calendar table 3`] = `
<td
  class="jsx-3390703719"
  data-testid="table-cell-0-4"
>
  <div
    class="jsx-3877038798 calendar-cell "
  >
    <div
      class="jsx-3877038798 day"
    >
      1
    </div>
    <div
      class="jsx-3877038798 plus"
      data-testid="add-event-2019-02-02T00:00:00.000Z"
      role="button"
    >
      +
    </div>
  </div>
</td>
`;

exports[`Test Calendar component Month switcher: Click on arrows and check calendar table 4`] = `
<td
  class="jsx-3390703719"
  data-testid="table-cell-4-4"
/>
`;

exports[`Test Calendar component Popup: Form 1`] = `
<table
  class="jsx-3390703719 calendar-table"
  data-testid="table"
>
  <thead
    class="jsx-3390703719"
    data-testid="table-head"
  >
    <tr
      class="jsx-3390703719"
    >
      <th
        class="jsx-3390703719"
        data-testid="Monday"
      >
        Monday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Tuesday"
      >
        Tuesday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Wednesday"
      >
        Wednesday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Thursday"
      >
        Thursday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Friday"
      >
        Friday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Saturday"
      >
        Saturday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Sunday"
      >
        Sunday
      </th>
    </tr>
  </thead>
  <tbody
    class="jsx-3390703719"
  >
    <tr
      class="jsx-3390703719"
    >
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-0"
      />
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-1"
      >
        <div
          class="jsx-3877038798 calendar-cell is-today"
        >
          <div
            class="jsx-3877038798 day"
          >
            1
          </div>
          <ul
            class="jsx-3877038798 events"
          >
            <li
              class="jsx-3877038798 event"
            >
              <div
                class="jsx-3877038798 title"
                data-testid="Test title 1-2019-01-02T00:00:00.000Z"
                role="button"
                tabindex="0"
              >
                Test title 1
              </div>
            </li>
          </ul>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-02T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-2"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            2
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-03T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-3"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            3
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-04T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-4"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            4
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-05T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-5"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            5
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-06T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-6"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            6
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-07T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
    </tr>
    <tr
      class="jsx-3390703719"
    >
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-0"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            7
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-08T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-1"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            8
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-09T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-2"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            9
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-10T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-3"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            10
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-11T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-4"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            11
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-12T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-5"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            12
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-13T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-6"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            13
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-14T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
    </tr>
    <tr
      class="jsx-3390703719"
    >
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-0"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            14
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-15T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-1"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            15
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-16T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-2"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            16
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-17T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-3"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            17
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-18T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-4"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            18
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-19T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-5"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            19
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-20T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-6"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            20
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-21T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
    </tr>
    <tr
      class="jsx-3390703719"
    >
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-0"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            21
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-22T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-1"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            22
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-23T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-2"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            23
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-24T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-3"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            24
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-25T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-4"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            25
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-26T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-5"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            26
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-27T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-6"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            27
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-28T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
    </tr>
    <tr
      class="jsx-3390703719"
    >
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-0"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            28
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-29T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-1"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            29
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-30T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-2"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            30
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-31T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-3"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            31
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-02-01T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-4"
      />
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-5"
      />
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-6"
      />
    </tr>
  </tbody>
</table>
`;

exports[`Test Calendar component Popup: Form 2`] = `
<table
  class="jsx-3390703719 calendar-table"
  data-testid="table"
>
  <thead
    class="jsx-3390703719"
    data-testid="table-head"
  >
    <tr
      class="jsx-3390703719"
    >
      <th
        class="jsx-3390703719"
        data-testid="Monday"
      >
        Monday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Tuesday"
      >
        Tuesday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Wednesday"
      >
        Wednesday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Thursday"
      >
        Thursday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Friday"
      >
        Friday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Saturday"
      >
        Saturday
      </th>
      <th
        class="jsx-3390703719"
        data-testid="Sunday"
      >
        Sunday
      </th>
    </tr>
  </thead>
  <tbody
    class="jsx-3390703719"
  >
    <tr
      class="jsx-3390703719"
    >
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-0"
      />
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-1"
      >
        <div
          class="jsx-3877038798 calendar-cell is-today"
        >
          <div
            class="jsx-3877038798 day"
          >
            1
          </div>
          <ul
            class="jsx-3877038798 events"
          >
            <li
              class="jsx-3877038798 event"
            >
              <div
                class="jsx-3877038798 title"
                data-testid="Test title upd-2019-01-02T00:00:00.000Z"
                role="button"
                tabindex="0"
              >
                Test title upd
              </div>
            </li>
          </ul>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-02T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-2"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            2
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-03T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-3"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            3
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-04T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-4"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            4
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-05T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-5"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            5
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-06T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-0-6"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            6
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-07T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
    </tr>
    <tr
      class="jsx-3390703719"
    >
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-0"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            7
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-08T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-1"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            8
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-09T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-2"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            9
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-10T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-3"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            10
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-11T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-4"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            11
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-12T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-5"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            12
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-13T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-1-6"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            13
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-14T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
    </tr>
    <tr
      class="jsx-3390703719"
    >
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-0"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            14
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-15T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-1"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            15
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-16T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-2"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            16
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-17T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-3"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            17
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-18T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-4"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            18
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-19T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-5"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            19
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-20T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-2-6"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            20
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-21T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
    </tr>
    <tr
      class="jsx-3390703719"
    >
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-0"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            21
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-22T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-1"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            22
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-23T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-2"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            23
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-24T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-3"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            24
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-25T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-4"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            25
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-26T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-5"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            26
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-27T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-3-6"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            27
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-28T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
    </tr>
    <tr
      class="jsx-3390703719"
    >
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-0"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            28
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-29T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-1"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            29
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-30T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-2"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            30
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-01-31T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-3"
      >
        <div
          class="jsx-3877038798 calendar-cell "
        >
          <div
            class="jsx-3877038798 day"
          >
            31
          </div>
          <div
            class="jsx-3877038798 plus"
            data-testid="add-event-2019-02-01T00:00:00.000Z"
            role="button"
          >
            +
          </div>
        </div>
      </td>
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-4"
      />
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-5"
      />
      <td
        class="jsx-3390703719"
        data-testid="table-cell-4-6"
      />
    </tr>
  </tbody>
</table>
`;
